--- a/src/content/post/20160405_bbh.md
+++ b/src/content/post/20160405_bbh.md
@@ -5,14 +5,12 @@ tags        = ['drush8', 'hugo', 'user experience', 'design']
 topics      = ['Brown bag happy hour']
 description = "First spring BBH"
 slug        = 'brown-bag-happy-hour'
-author      = "Marcello Gorla"
+author      = "Marcello"
 +++
 [SparkFabrik]: http://www.sparkfabrik.com/  "SparkFabrik"
 [Fast Co Design]: http://www.fastcodesign.com/3058517/frog-will-have-no-more-chief-creative-officers "Fast Co Design"
 
 In the first BBH of spring 2016 Marcello Testi discussed about Drush Make related issues within Drush8, and Paolo Mainardi introduced the Hugo static site generator to the team in order to kickstart the [SparkFabrik] Tech Blog. We also talked a little about design thanks to our weekly news digest.
-
-By <a href="/page/team#marcello_gorla">Marcello Gorla</a>
 
 <!--more-->
 
