post and images

--- a/src/content/post/20160419_bbh.md
+++ b/src/content/post/20160419_bbh.md
@@ -3,49 +3,70 @@ date        = "2016-04-19T08:51:09+02:00"
 title       = "Brown bag happy-hour, April 19th 2016"
 tags        = ['drush8', 'hugo', 'user experience', 'design']
 topics      = ['Brown bag happy hour']
-description = "First spring BBH"
+description = "Second appointment of April's BBH"
 slug        = 'brown-bag-happy-hour'
 author      = "Enrico"
 +++
 [SparkFabrik]: http://www.sparkfabrik.com/  "SparkFabrik"
-[Fast Co Design]: http://www.fastcodesign.com/3058517/frog-will-have-no-more-chief-creative-officers "Fast Co Design"
 
-In the first BBH of spring 2016 Marcello Testi discussed about Drush Make related issues within Drush8, and Paolo Mainardi introduced the Hugo static site generator to the team in order to kickstart the [SparkFabrik] Tech Blog. We also talked a little about design thanks to our weekly news digest.
+News about Drupal, Telegram and Youtube for this new appointment of BBH!
 
 <!--more-->
 
 # Weekly News
 
-This week we discussed mainly design-related news, brought by Marcello Gorla.
+Drupal, Telegram API and YouTube for this new appointment of BBH. By Enrico Sato.
 
-### Adobe XD
+### Drupal 8.1.0 is now available
 
-![Adobe XD](/posts/2016_adobexd.jpg)
+The testing for the first release candidate is concluded and now the drupal community published the first minor release of Drupal 8.1.0 version.
+What is new?
+* Experimental UI for migrations from older Drupal versions;
+* integration with BigPipe for performance of site;
+* CKEditor WYSIWYG spellchecking and language button;
+* Rendered entities in Views fields;
 
-Originally know as “Project Comet", Adobe has released the preview of [Adobe XD](http://blogs.adobe.com/creativecloud/introducing-adobe-experience-design-cc-preview/), it's own tool intended for design and prototyping of user experience projects. The tool it's an early stage release that still does not offer a full stack of features as we are used to with more advanced (and mature) softwares like Sketch or Adobe Photoshop, but there's a [lot of stuff moving on](https://www.youtube.com/playlist?list=PLD8AMy73ZVxXvBQcZAnOcu57JCFxLi7bQ) and we think it's worth trying.
+See all details at [drupal.org](https://www.drupal.org/blog/drupal-8-1-0)
 
-[Some opinions](https://medium.com/user-experience-design-1/first-impressions-with-adobe-experience-design-107904b5efbe#.25cvqr3ys) of course have been [already popped out](http://techcrunch.com/2016/03/14/adobe-launches-experience-design-cc-a-new-tool-for-ux-designers/).
+To update from 8.0.6 to 8.1.0 use the update procedure (it is the same as updating from 8.0.5 to 8.0.6). Drupal community recommends to test the update carefully before updating your production site.
 
-### Frog will have no more CCO
+### A drupal distribution for publishers: Thunder
 
-After the departure of Hans Neubert, the international design firm [Frog](http://www.frogdesign.com/) recently decided [not to replace it's Chief Creative Officer with a new one](http://designmind.frogdesign.com/2016/03/evolving-creative-leadership-at-frog/), implementing a more agile structure with many Creative Officers around the world leading the single design teams. From a wider perspective, this event has an interesting impact.  A [Fast Co Design] article made a good point over this, trying to consider what is happening to the design consultancies and firms and to the field in general.
+![Thunder distribution](/posts/2016_thunder.jpg)
 
-> While design is more in demand than ever, the business of design consultancies has been in flux. Mega business consultants Accenture and IBM have each been making $100 million-plus bets on increasing their design fluency. Meanwhile, design firms ranging from Lunar to Ideo have reassessed their business strategies, and firms like Yves Behar's Fuseproject have sold outright to foreign investors.
-(Via [Fast Co Design])
+Media group [Huber Burda Media](http://www.hubert-burda-media.com/) released its Drupal 8 distribution, [Thunder](http://www.thunder.org/), that includes contrib and custom modules selected for publisher’s world. This distribution is born thanks to a strong collaboration between publishers and developers and the final product shows a particularly care to UX that make easier the publisher’s workflow.
+And, last but not least, it is build with Drupal 8!
 
-### OLO reached founding goal
+You can download Thunder from https://www.drupal.org/project/thunder or test it here: https://simplytest.me/project/thunder
 
-![Adobe XD](/posts/2016_olo.jpg)
+### Telegram Bot API 2.0
 
-The Italian Kickstarter project [Olo](https://www.kickstarter.com/projects/olo3d/olo-the-first-ever-smartphone-3d-printer), a 3D printer suited for the smartphones screen, has reached the funding goal and is running fast towards more stellar ones. Promising very good print resolution at low costs, this 3D printer could be a step forward to unchain the potential of personal projects prototyping and experimentation, but also a new frontier to many other unexplored fields like the home-productions of games.
+![Telegram Bot API 2.0](/posts/2016_telegram.jpg)
 
-### Bonus Track, trend to follow: conversational interfaces
+After one year from the release launch of first Bot Platform, Telegram announces new tools for its platform: Bot Platform 2.0
 
-Conversational Interfaces could be a good trend to follow, in our opinion. [Fast Co Design](http://www.fastcodesign.com/3058546/conversational-interfaces-explained?partner=rss) article on the topic points out how this pattern is quite interesting from a design point of view, because it elitminates a barrier, the UI, between the human and the machine languages. And this is particularly interesting considering the great hype that is surrounding the new wave of virtual reality interfaces, as the Oculus Rift, and the augmented reality in general.
+> Today we are giving bot developers a whole new dimension with Bots 2.0: inline keyboards, callback and URL buttons, location permissions and on-the-fly message editing. The new bots can also generate any type of content for you to share with friends, including documents, MP3s, videos, stickers, animations and contacts.
 
-> So for most of computer history, we've communicated with computers essentially through Rosetta stones: We point at a symbol representing what we want a computer to do, and then it does it. For example, clicking an icon to open an app. With conversational interfaces, computers and humans can finally speak the same language without a Rosetta stone in between.
+Telegram have already built some of Bot’s example to try the new possibilities:
+* [@music](https://telegram.me/music)
+* [@youtube](https://telegram.me/youtube)
+* [@foursquare](https://telegram.me/foursquare)
+* [@sticker](https://telegram.me/sticker)
+(only for last update of your app).
 
-On [Medium, Daniel Eckler](https://medium.com/life-learning/the-future-of-cui-isn-t-conversational-fa3d9458c2b5) wrote a very good article about how the design impacts this topic.
+See the [Documentation about Telegram Bot API 2.0](https://core.telegram.org/bots/2-0-intro)
+
+But, if you are not a coder and you would like to test the potentiality of Telegram’s Bot, you can start with [Chatfuel](http://chatfuel.com) and the possible integration with [Zapier]( https://zapier.com/zapbook/chatfuel).
+
+### Youtube introduces 360-degree live streaming and spatial audio
+
+![Youtube 360-degree live streaming](https://lh3.googleusercontent.com/DvouWzN1dRdQtjATPUAXVkH2zcxEQpPdKlnvsY7i6aTxIl8NbcpUAJncUukeTb4igklbRWrleCFksDDVojv1GN6AiZk4v_2opy8cGX-C7hO2c0dgTx52gUQBJ_hc_5GBEMKAbkpb)
+
+After the launch of support for 360 degrees videos, Youtube makes another step to the virtual reality: now its platform allows the streaming with 360 degree technology and spacial audio effects
+
+> Just as watching a concert in 360 degrees can give you an unmatched immersive experience, spatial audio allows you to listen along as you do in real life, where depth, distance and intensity all play a role.
+
+Youtube works with companies like VideoStitch and Two Big Ears to make their software compatible with 360-degree live streams or spatial audio on YouTube. 360-degree live streaming and spatial audio technologies are avaliable at all YouTube [Space locations around the globe](https://www.youtube.com/yt/space/), for people who wants to try this experience.
 
 ***
 The *BBH (Brown bag happy-hour)* it's a [SparkFabrik] regular activity where we share discoveries and techniques with each other and discuss the last two week tech and innovation world novelties.
