fix post e team description

--- a/src/content/post/20160419_bbh.md
+++ b/src/content/post/20160419_bbh.md
@@ -19,12 +19,14 @@ Drupal, Telegram API and YouTube for this new appointment of BBH. By Enrico Sato
 
 ### Drupal 8.1.0 is now available
 
-The testing for the first release candidate is concluded and now the drupal community published the first minor release of Drupal 8.1.0 version.
+The testing for the [first release candidate](https://www.drupal.org/drupal-8.1.0-rc1) is concluded and now the drupal community published the first minor release of Drupal 8.1.0 version.
+
 What is new?
-* Experimental UI for migrations from older Drupal versions;
-* integration with BigPipe for performance of site;
-* CKEditor WYSIWYG spellchecking and language button;
-* Rendered entities in Views fields;
+
+*   Experimental UI for migrations from older Drupal versions;
+*   Integration with BigPipe for performance of site;
+*   CKEditor WYSIWYG spellchecking and language button;
+*   Rendered entities in Views fields;
 
 See all details at [drupal.org](https://www.drupal.org/blog/drupal-8-1-0)
 
@@ -48,10 +50,12 @@ After one year from the release launch of first Bot Platform, Telegram announces
 > Today we are giving bot developers a whole new dimension with Bots 2.0: inline keyboards, callback and URL buttons, location permissions and on-the-fly message editing. The new bots can also generate any type of content for you to share with friends, including documents, MP3s, videos, stickers, animations and contacts.
 
 Telegram have already built some of Bot’s example to try the new possibilities:
+
 * [@music](https://telegram.me/music)
 * [@youtube](https://telegram.me/youtube)
 * [@foursquare](https://telegram.me/foursquare)
 * [@sticker](https://telegram.me/sticker)
+
 (only for last update of your app).
 
 See the [Documentation about Telegram Bot API 2.0](https://core.telegram.org/bots/2-0-intro)
