Slight editing to this great post. Hope this sounds a bit better.

--- a/src/content/post/20160419_bbh.md
+++ b/src/content/post/20160419_bbh.md
@@ -36,41 +36,41 @@ To update from 8.0.6 to 8.1.0 use the update procedure (it is the same as updati
 
 ![Thunder distribution](/posts/2016_thunder.jpg)
 
-Media group [Huber Burda Media](http://www.hubert-burda-media.com/) released its Drupal 8 distribution, [Thunder](http://www.thunder.org/), that includes contrib and custom modules selected for publisher’s world. This distribution is born thanks to a strong collaboration between publishers and developers and the final product shows a particularly care to UX that make easier the publisher’s workflow.
-And, last but not least, it is build with Drupal 8!
+Media group [Huber Burda Media](http://www.hubert-burda-media.com/) released its Drupal 8 distribution, [Thunder](http://www.thunder.org/), that includes contrib and custom modules selected for publisher’s world. This distribution is born thanks to a strong collaboration between publishers and developers and the final product shows a particularly care to UX that soothes the publisher’s workflow.
+And, last but not least, it is built on Drupal 8!
 
-You can download Thunder from https://www.drupal.org/project/thunder or test it here: https://simplytest.me/project/thunder
+You can [download Thunder](https://www.drupal.org/project/thunder) or [test it out](https://simplytest.me/project/thunder).
 
 ### Telegram Bot API 2.0
 
 ![Telegram Bot API 2.0](/posts/2016_telegram.jpg)
 
-After one year from the release launch of first Bot Platform, Telegram announces new tools for its platform: Bot Platform 2.0
+One year after the the first release of its Bot Platform, Telegram announces new tools for it: Bot Platform 2.0
 
 > Today we are giving bot developers a whole new dimension with Bots 2.0: inline keyboards, callback and URL buttons, location permissions and on-the-fly message editing. The new bots can also generate any type of content for you to share with friends, including documents, MP3s, videos, stickers, animations and contacts.
 
-Telegram have already built some of Bot’s example to try the new possibilities:
+Telegram have already released some Bot’s example to try out the new capabilities:
 
 * [@music](https://telegram.me/music)
 * [@youtube](https://telegram.me/youtube)
 * [@foursquare](https://telegram.me/foursquare)
 * [@sticker](https://telegram.me/sticker)
 
-(only for last update of your app).
+(you must update your app to the last version).
 
 See the [Documentation about Telegram Bot API 2.0](https://core.telegram.org/bots/2-0-intro)
 
-But, if you are not a coder and you would like to test the potentiality of Telegram’s Bot, you can start with [Chatfuel](http://chatfuel.com) and the possible integration with [Zapier]( https://zapier.com/zapbook/chatfuel).
+But, if you are not a coder and you would like to test the potential of Telegram’s Bot, you can start with [Chatfuel](http://chatfuel.com) and the possible integration with [Zapier]( https://zapier.com/zapbook/chatfuel).
 
 ### Youtube introduces 360-degree live streaming and spatial audio
 
 ![Youtube 360-degree live streaming](https://lh3.googleusercontent.com/DvouWzN1dRdQtjATPUAXVkH2zcxEQpPdKlnvsY7i6aTxIl8NbcpUAJncUukeTb4igklbRWrleCFksDDVojv1GN6AiZk4v_2opy8cGX-C7hO2c0dgTx52gUQBJ_hc_5GBEMKAbkpb)
 
-After the launch of support for 360 degrees videos, Youtube makes another step to the virtual reality: now its platform allows the streaming with 360 degree technology and spacial audio effects
+After the launch of support for 360 degrees videos, Youtube makes another step towards virtual reality: now its platform allows for streaming with 360 degree technology and spacial audio effects
 
 > Just as watching a concert in 360 degrees can give you an unmatched immersive experience, spatial audio allows you to listen along as you do in real life, where depth, distance and intensity all play a role.
 
-Youtube works with companies like VideoStitch and Two Big Ears to make their software compatible with 360-degree live streams or spatial audio on YouTube. 360-degree live streaming and spatial audio technologies are avaliable at all YouTube [Space locations around the globe](https://www.youtube.com/yt/space/), for people who wants to try this experience.
+Youtube works with companies like **VideoStitch** and **Two Big Ears** to make their software compatible with 360-degree live streams or spatial audio. 360-degree live streaming and spatial audio technologies are avaliable at all [YouTube Space locations around the globe](https://www.youtube.com/yt/space/), for people who wants to try this experience.
 
 ***
 The *BBH (Brown bag happy-hour)* it's a [SparkFabrik] regular activity where we share discoveries and techniques with each other and discuss the last two week tech and innovation world novelties.
