refs #000: use HTTPS for requests to SF website.

--- a/src/content/post/20160419_bbh.md
+++ b/src/content/post/20160419_bbh.md
@@ -7,7 +7,7 @@ description = "Second appointment of April's BBH"
 slug        = 'brown-bag-happy-hour'
 author      = "Enrico"
 +++
-[SparkFabrik]: http://www.sparkfabrik.com/  "SparkFabrik"
+[SparkFabrik]: https://www.sparkfabrik.com/  "SparkFabrik"
 
 News about Drupal, Telegram and Youtube for this new appointment of BBH!
 
