--- a/src/content/post/20160510_bbh.md
+++ b/src/content/post/20160510_bbh.md
@@ -7,7 +7,7 @@ description = "First appointment of May's BBH"
 slug        = 'brown-bag-happy-hour-2016-05-04'
 author      = "Osvaldo"
 +++
-[SparkFabrik]: http://www.sparkfabrik.com/  "SparkFabrik"
+[SparkFabrik]: https://www.sparkfabrik.com/  "SparkFabrik"
 
 News about Drupal, Backtrac Casestudy, Drupal Developer Days and PHP for this new appointment of BBH!
 
